After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711548 - GtkPlacesSidebar doesn't show unmounted bookmarks
GtkPlacesSidebar doesn't show unmounted bookmarks
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
: 705055 706714 712273 720744 (view as bug list)
Depends on: 711574
Blocks:
 
 
Reported: 2013-11-06 13:32 UTC by Bastien Nocera
Modified: 2013-12-19 17:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkPlacesSidebar: Show unmounted infos (2.11 KB, patch)
2013-11-06 18:14 UTC, Bastien Nocera
needs-work Details | Review
GtkPlacesSidebar: Show unmounted bookmarks (4.10 KB, patch)
2013-11-13 12:53 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-11-06 13:32:11 UTC
The code to add the bookmarks to the sidebar is broken when the bookmark doesn't point to a mounted volume:
                /* FIXME: we are getting file info synchronously.  We may want to do it async at some point. */
                info = g_file_query_info (root,
                                          "standard::display-name,standard::symbolic-icon",
                                          G_FILE_QUERY_INFO_NONE,
                                          NULL,
                                          NULL); /* NULL-GError */

                if (info) {
                            .....

The file info query will obviously fail for unmounted remote shares. Mounting them makes them show up.
Comment 1 Bastien Nocera 2013-11-06 18:14:03 UTC
Created attachment 259133 [details] [review]
GtkPlacesSidebar: Show unmounted infos

The GtkFileInfo is only used if there's no bookmark name,
or to get the icon for the remote share.
Comment 2 Emmanuele Bassi (:ebassi) 2013-11-06 18:55:09 UTC
Review of attachment 259133 [details] [review]:

I'd use "show unmounted bookmarks" in the commit message, but other than that it looks good to me, and it fixes a glaring regression.
Comment 3 António Fernandes 2013-11-06 21:48:29 UTC
*** Bug 706714 has been marked as a duplicate of this bug. ***
Comment 4 Bastien Nocera 2013-11-06 22:38:11 UTC
Comment on attachment 259133 [details] [review]
GtkPlacesSidebar: Show unmounted infos

Missing a fallback name for unmounted share with no name set (a g_file_get_basename() might do that). Will re-spin and test it before uploading a new version.
Comment 5 Bastien Nocera 2013-11-06 23:10:51 UTC
I found a big regression in the places sidebar.
Comment 6 António Fernandes 2013-11-12 14:02:51 UTC
*** Bug 705055 has been marked as a duplicate of this bug. ***
Comment 7 Bastien Nocera 2013-11-13 12:53:42 UTC
Created attachment 259732 [details] [review]
GtkPlacesSidebar: Show unmounted bookmarks

The GtkFileInfo is only used if there's no bookmark name,
or to get the icon for the remote share or local folder.
Comment 8 Matthias Clasen 2013-11-13 13:01:23 UTC
Review of attachment 259732 [details] [review]:

looks right
Comment 9 Matthias Clasen 2013-11-14 04:34:16 UTC
Attachment 259732 [details] pushed as 3f5af53 - GtkPlacesSidebar: Show unmounted bookmarks
Comment 10 António Fernandes 2013-11-14 15:34:18 UTC
*** Bug 712273 has been marked as a duplicate of this bug. ***
Comment 11 António Fernandes 2013-12-19 17:20:41 UTC
*** Bug 720744 has been marked as a duplicate of this bug. ***